<resources>
    <string name="app_name">Aircraft_war</string>
    <string name="difficultySelect">难度选择</string>
    <string name="easy">简单模式</string>
    <string name="medium">普通模式</string>
    <string name="hard">困难模式</string>
    <string name="soundSelect">音效选择</string>
    <string name="rank">排行榜</string>
    <string name="delete">删除</string>
    <string name="rankNum">排名</string>
    <string name="user">用户名</string>
    <string name="score">得分</string>
    <string name="playTime">游戏时间</string>
    <string name="welcome">飞机大战</string>
    <string name="login_emailAddress">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="register">点此注册</string>
    <string name="planelogo">planelogo</string>
    <string name="register_confirmPassword">确认密码</string>
    <string name="register_title">注册用户</string>
    <string name="regActivityButton">注册</string>
    <string name="modeChoice">模式选择</string>
    <string name="singlePlayer">单机模式</string>
    <string name="doublePlayer">对战模式</string>
    <string name="nothing">nothing</string>
    <string name="profile">个人中心</string>
    <string name="information">账户信息</string>
    <string name="deleteInfo">注销账号</string>
    <string name="resign">退出登录</string>
    <string name="userName">用户名</string>
    <string name="best">历史最佳</string>
    <string name="deleteHistory">删除历史</string>
</resources>