<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActivity">

    <TextView
        android:id="@+id/main_textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/modeChoice"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select_singleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/singlePlayer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/nothing"
        app:layout_constraintBottom_toBottomOf="@+id/select_doubleButton"
        app:layout_constraintEnd_toStartOf="@+id/select_doubleButton"
        app:layout_constraintTop_toTopOf="@+id/select_doubleButton"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/ic_baseline_filter_2_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/nothing"
        app:layout_constraintBottom_toBottomOf="@+id/select_singleButton"
        app:layout_constraintEnd_toStartOf="@+id/select_singleButton"
        app:layout_constraintTop_toTopOf="@+id/select_singleButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_filter_1_24" />

    <Button
        android:id="@+id/select_doubleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/doublePlayer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/select_singleButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/select_singleButton"
        app:layout_constraintTop_toBottomOf="@+id/select_singleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>