<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textView" />

    <TextView
        android:id="@+id/profile_showEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/information"
        app:layout_constraintStart_toStartOf="@+id/information"
        app:layout_constraintTop_toBottomOf="@+id/information" />

    <TextView
        android:id="@+id/profile_showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/profile_showEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_showEmail"
        app:layout_constraintTop_toBottomOf="@+id/profile_showEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="108dp"
        android:text="@string/deleteInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_showPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>